# OSWet2

./: .gitignore  ATM.cpp  ATM.h  Account.cpp  Account.h  Bank.cpp  Bank.h  CMakeLists.txt  PrintSafe.cpp  PrintSafe.h  README  README.md  common.cpp  common.h  consts.h  log.txt  main.c  main.cpp  makefile  short_atm.txt  types.h
